# ndk-libc-fix

./: CMakeLists.txt  conanfile.py
src/: CMakeLists.txt  crypt-md5.c  crypt-nthash.c  crypt-sha256.c  crypt-sha512.c  crypt.c  endian-port.h  glob.c  glob.h  issetguid.c  issetguid.h  md4.h  md4c.c  md5.h  md5c.c  sha256c.c  sha512c.c
